--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
 		"laravel/framework": "5.0.*",
         "lanz/laravel-commentable": "~2.0",
 		"barryvdh/laravel-ide-helper": "~2.0",
-		"doctrine/dbal": "~2.5"
+		"doctrine/dbal": "~2.5",
+		"stojg/crop": "~1.2",
+		"omnipay/paymentexpress": "~2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
