--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "laravel-elixir": "*"
+    "babelify": "^6.1.2",
+    "browserify": "^10.2.4",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-uglify": "^1.2.0",
+    "laravel-elixir": "*",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.3"
+  },
+  "dependencies": {
+    "gsap": "^1.17.0",
+    "jquery": "^2.1.4",
+    "q": "^1.4.1",
+    "react": "^0.13.3",
+    "rivets": "^0.8.1",
+    "waypoints": "^3.1.1"
   }
 }
