--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "gsap": "^1.17.0",
     "jquery": "^2.1.4",
     "q": "^1.4.1",
-    "react": "^0.13.3",
-    "rivets": "^0.8.1",
-    "waypoints": "^3.1.1"
+    "select2": "^4.0.0",
+    "waypoints": "^3.1.1",
+    "whatwg-fetch": "^0.9.0"
   }
 }
