some work on public sharing, work on home module requiring login for part, but not for the start of it.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "lanz/laravel-commentable": "~2.0",
 		"barryvdh/laravel-ide-helper": "~2.0",
 		"doctrine/dbal": "~2.5",
-		"stojg/crop": "~1.2",
+		"stojg/crop": "^1.2",
 		"omnipay/paymentexpress": "~2.1",
 		"misd/linkify": "^1.1"
 	},
