--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-babel": "^5.1.0",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
+    "gulp-rsync": "0.0.5",
     "gulp-uglify": "^1.2.0",
     "laravel-elixir": "*",
     "vinyl-buffer": "^1.0.0",
