--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		"stojg/crop": "^1.2",
 		"omnipay/paymentexpress": "~2.1",
 		"misd/linkify": "^1.1",
-		"vimeo/vimeo-api": "^1.2"
+		"vimeo/vimeo-api": "^1.2",
+		"mobiledetect/mobiledetectlib": "^2.8"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
