--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^2.1.4",
     "parsleyjs": "^2.1.2",
     "q": "^1.4.1",
+    "remodal": "^1.0.3",
     "select2": "^4.0.0",
     "waypoints": "^3.1.1",
     "whatwg-fetch": "^0.9.0"
