--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.0.0",
     "gulp-rsync": "0.0.5",
     "gulp-uglify": "^1.2.0",
     "laravel-elixir": "*",
