--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "watchify": "^3.2.3"
   },
   "dependencies": {
+    "es6-promise": "^3.0.2",
     "gsap": "^1.17.0",
     "jquery": "^2.1.4",
     "parsleyjs": "^2.1.2",
