--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,13 @@ MODULE_LOCK_TIME=48
 
 VIMEO_APP_ID=asdf
 VIMEO_ACCESS_TOKEN=asdf
+
+
+MAIL_HOST=smtp.sendgrid.net
+MAIL_USERNAME=username
+MAIL_PASSWORD=password
+MAIL_PRETEND=false
+
+
+DPS_USERNAME=username
+DPS_KEY=key
