--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "browserify": "^10.2.4",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
+    "gulp-compass": "^2.1.0",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.0",
