--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "watchify": "^3.2.3"
   },
   "dependencies": {
+    "blueimp-load-image": "^1.14.0",
     "es6-promise": "^3.0.2",
     "gsap": "^1.17.0",
     "jquery": "^2.1.4",
