--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		"daniel/omnipay-paymentexpress": "dev-master",
 		"misd/linkify": "^1.1",
 		"vimeo/vimeo-api": "^1.2",
-		"mobiledetect/mobiledetectlib": "^2.8"
+		"mobiledetect/mobiledetectlib": "^2.8",
+		"mikehaertl/phpwkhtmltopdf": "^2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
