fix .env.example formatting

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,7 @@ MAIL_PRETEND=false
 DPS_USERNAME=username
 DPS_KEY=key
 
-WKHTMLTOPDF_LOCATION /usr/local/bin/wkhtmltopdf
+WKHTMLTOPDF_LOCATION=/usr/local/bin/wkhtmltopdf
+
+FFMPEG_LOCATION=/usr/local/bin/ffmpeg
+FFPROBE_LOCATION=/usr/local/bin/ffprobe
