--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 		"misd/linkify": "^1.1",
 		"vimeo/vimeo-api": "^1.2",
 		"mobiledetect/mobiledetectlib": "^2.8",
-		"mikehaertl/phpwkhtmltopdf": "^2.1"
+		"mikehaertl/phpwkhtmltopdf": "^2.1",
+		"php-ffmpeg/php-ffmpeg": "^0.6.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
