--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"vimeo/vimeo-api": "^1.2",
 		"mobiledetect/mobiledetectlib": "^2.8",
 		"mikehaertl/phpwkhtmltopdf": "^2.1",
-		"php-ffmpeg/php-ffmpeg": "^0.6.0"
+		"php-ffmpeg/php-ffmpeg": "^0.6.0",
+		"donatj/phpuseragentparser": "^0.5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
