--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,5 @@ WKHTMLTOPDF_LOCATION=/usr/local/bin/wkhtmltopdf
 
 FFMPEG_LOCATION=/usr/local/bin/ffmpeg
 FFPROBE_LOCATION=/usr/local/bin/ffprobe
+
+MAILCHIMP_API_KEY=key
