--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"mobiledetect/mobiledetectlib": "^2.8",
 		"mikehaertl/phpwkhtmltopdf": "^2.1",
 		"php-ffmpeg/php-ffmpeg": "^0.6.0",
-		"donatj/phpuseragentparser": "^0.5.0"
+		"donatj/phpuseragentparser": "^0.5.0",
+		"drewm/mailchimp-api": "^2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
