--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "es6-promise": "^3.0.2",
     "gsap": "^1.17.0",
     "jquery": "^2.1.4",
+    "money": "^0.2.0",
     "parsleyjs": "^2.1.2",
     "q": "^1.4.1",
     "remodal": "^1.0.3",
