--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^1.17.0",
     "jquery": "^2.1.4",
     "money": "^0.2.0",
+    "open-exchange-rates": "^0.3.0",
     "parsleyjs": "^2.1.2",
     "q": "^1.4.1",
     "remodal": "^1.0.3",
