--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "es6-promise": "^3.0.2",
     "gsap": "^1.17.0",
     "jquery": "^2.1.4",
+    "lodash": "^4.13.1",
     "money": "^0.2.0",
     "open-exchange-rates": "^0.3.0",
     "parsleyjs": "^2.1.2",
