--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,9 @@
 		"mikehaertl/phpwkhtmltopdf": "^2.1",
 		"php-ffmpeg/php-ffmpeg": "^0.6.0",
 		"donatj/phpuseragentparser": "^0.5.0",
-		"drewm/mailchimp-api": "^2.1",
-		"itsgoingd/clockwork": "~1.11.1"
+		"itsgoingd/clockwork": "~1.11.1",
+		"lstrojny/fxmlrpc": "0.10",
+		"novaksolutions/infusionsoft-php-sdk": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -38,7 +39,8 @@
 	},
 	"autoload": {
 		"classmap": [
-			"database"
+			"database",
+			"vendor/novaksolutions/infusionsoft-php-sdk/Infusionsoft"
 		],
 		"psr-4": {
 			"App\\": "app/"
