--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,19 @@
 		{
 			"type": "vcs",
 			"url": "https://github.com/readelobdill/laravel-commentable.git"
+		},
+		{
+			"type": "vcs",
+			"url": "https://github.com/readelobdill/infusionsoft-php-sdk.git"
 		}
 	],
-
+	"minimum-stability": "dev",
 	"require": {
 		"laravel/framework": "5.1.*",
 		"barryvdh/laravel-ide-helper": "~2.0",
 		"doctrine/dbal": "~2.5",
 		"stojg/crop": "^1.2",
+		"readelobdill/infusionsoft-php-sdk": "dev-master",
 		"readelobdill/laravel-commentable": "dev-master",
 		"daniel/omnipay-paymentexpress": "dev-master",
 		"misd/linkify": "^1.1",
@@ -30,8 +35,7 @@
 		"php-ffmpeg/php-ffmpeg": "^0.6.0",
 		"donatj/phpuseragentparser": "^0.5.0",
 		"itsgoingd/clockwork": "~1.11.1",
-		"lstrojny/fxmlrpc": "0.10",
-		"readelobdill/infusionsoft-php-sdk": "dev-master"
+		"lstrojny/fxmlrpc": "0.10"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
